--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,12 @@ dependencies = [
     "lightgbm (>=4.6.0,<5.0.0)",
     "xgboost (>=3.0.4,<4.0.0)",
     "rich (>=14.1.0,<15.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "matplotlib (>=3.10.6,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "pandera (>=0.26.1,<0.27.0)",
+    "jupyter (>=1.1.1,<2.0.0)"
 ]
 
 
@@ -33,4 +38,11 @@ build-backend = "poetry.core.masonry.api"
 package-mode = false
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
-
+jupytext = "^1.17.3"
+nbclient = "^0.10.2"
+papermill = "^2.6.0"
+pre-commit = "^4.3.0"
+ruff = "^0.12.12"
+black = "^25.1.0"
+nbqa = "^1.9.1"
+nbdime = "^4.0.2"
